# simple-assistant

./: .gitignore  README.md  config.yml  pyproject.toml  requirements.txt
configs/: default.yml  mordin.yml
conversations/: demo.yml
knowledge/: default.py
memory/: default.py
model_apis/: gpt_chat_models.py  openai_chat.py
prompts/: coding_assistant.py  default.py  mordin.py
scripts/: main.py
simple_assistant/: core.py  types.py
simple_assistant/utilities/: __init__.py
